src/index.css
@stylex stylesheet;

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

@font-face {
  font-family: 'Roobert PRO';
  src:
    url('/fonts/RoobertPRO-Light.woff2') format('woff2'),
    url('/fonts/RoobertPRO-Light.woff') format('woff');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Roobert PRO';
  src:
    url('/fonts/RoobertPRO-Regular.woff2') format('woff2'),
    url('/fonts/RoobertPRO-Regular.woff') format('woff');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Roobert PRO';
  src:
    url('/fonts/RoobertPRO-Medium.woff2') format('woff2'),
    url('/fonts/RoobertPRO-Medium.woff') format('woff');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Roobert PRO';
  src:
    url('/fonts/RoobertPRO-Bold.woff2') format('woff2'),
    url('/fonts/RoobertPRO-Bold.woff') format('woff');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

